hphp/hack/test/typecheck/typeconsts/typeconst_expected_union.php.exp
File "typeconst_expected_union.php", line 23, characters 12-42:
Invalid argument (Typing[4326])
  File "typeconst_expected_union.php", line 8, characters 23-25:
  Expected `int`
  File "typeconst_expected_union.php", line 15, characters 75-80:
    resulting from accessing the type constant 'Tconst'
  File "typeconst_expected_union.php", line 23, characters 27-40:
    on an object of exactly the class SomeClassChild
  File "typeconst_expected_union.php", line 15, characters 75-80:
  But got `SomeClass::Tconst where \SomeClass::Tconst super <expr#2>::Tconst, \SomeClass::Tconst as arraykey`
  by accessing the type constant `Tconst`
  File "typeconst_expected_union.php", line 20, characters 33-41:
  on an object of type SomeClass
File "typeconst_expected_union.php", line 23, characters 12-42:
Invalid argument (Typing[4326])
  File "typeconst_expected_union.php", line 15, characters 75-80:
  Expected `SomeClass::Tconst`
  by accessing the type constant `Tconst`
  File "typeconst_expected_union.php", line 20, characters 33-41:
  on an object of type SomeClass
  File "typeconst_expected_union.php", line 8, characters 23-25:
  But got `int`
  File "typeconst_expected_union.php", line 15, characters 75-80:
    resulting from accessing the type constant 'Tconst'
  File "typeconst_expected_union.php", line 23, characters 27-40:
    on an object of exactly the class SomeClassChild
